# portable-testlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  testlib.h
test/: test.in  test.out
